--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 		<div class="header">
 			<div>JW</div>
 			<div class="nav">
-				<div class="active">Home</div>
+				<div class="active">Work</div>
 				<div><a href="about.html">About</a></div>
 				<div><a href="images/jameswilliams_resX.pdf">Resume</a></div>
+				<div style="color:#181818;font-size:13px;background-color:#ffee58;line-height:1;box-shadow:0 4px 12px rgba(255,238,88,.5);border-radius:4px;padding:5px 8px">WIP - More examples on the way!</div>
+
 			</div>
 		</div>
 		<div class="intro">
@@ -75,12 +77,12 @@
 				<div class="work-history-item grid">
 					<div>
 						<h4>AccuLynx<span>Sr UX Engineer</span></h4>
-						<p class="responsibilities">Create the company pattern library for product along with our product design team.  Participate in company wide iteration demonstrations, sprint planning and retrospectives. Collabrote with project owners and other designers for backlog refinement. Lead UX Engineer on the new Reporting feature.</p>
+						<p class="responsibilities">Create the company pattern library for product along with our product design team.  Participate in company wide iteration demonstrations, sprint planning and retrospectives. Collaborate with project owners and other designers for backlog refinement. Lead UX Engineer on the new Reporting feature.</p>
 					</div>
 				</div>
 				<div class="work-history-item grid">
 					<div>
-						<h4>Zywave<span>Sr UX Engineer/Design*</span></h4>
+						<a href="zywave.html"><h4>Zywave<span>Sr UX Engineer/Design*</span></h4></a>
 						<div>	
 							<svg class="trophy" width="16px" height="13px" viewBox="0 0 32 29" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
