--- a/zywave.html
+++ b/zywave.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body class="genalpha">
+<body class="zywave">
 	<div class="home-header">
 		<div class="header">
 			<div>JW</div>
@@ -38,93 +38,24 @@
 				<div><a href="about.html">About</a></div>
 				<div><a href="images/jameswilliams_resX.pdf">Resume</a></div>
 				<div style="color:#181818;font-size:13px;background-color:#ffee58;line-height:1;box-shadow:0 4px 12px rgba(255,238,88,.5);border-radius:4px;padding:5px 8px">WIP - More examples on the way!</div>
-
 			</div>
 		</div>
 		<div class="intro">
 			<div class="box">
-				<span class="glitch">GenAlpha —</span>
+				<span class="glitch">Zywave —</span>
 			</div>
-			<div class="tagline">Subscription based auto-reordering functionality</div>
+			<div class="tagline">Suite of tools to help insurance brokers serve their clients</div>
 		</div>
 		<div class="intro-secondary">
 			<div>
 				<div class="work-history-item feature">
 					<div class="grid">
 						<div class="span-col-2">
-							<h4>Subscription based ordering</h4>
-							<p>GenAlpha(PartSpot) is a fully integrated B2B ecommerce solution for aftermarket manufacturing products.  Selling everything from massive high power machines to the smallest of screws.  Some of these products are in constant and frequent need. So much so, we decided to allow the user to "subscribe" to an order and have it repeatedly be delivered without any action from the user. This functionality exists in alot of places (amazon, pet supplies, coffee, etc.) so there's somewhat of a familiarity that we're able to start with. </p>
+							<h4>ZUI (Zywave User Interface)</h4>
+							<p>Zywave's pattern library was created to bring consistency throughout the entire suite of products. Everything from colors and typography, to complicated components such as tables and accordions.  All components and elements were designed and documented specifically for Zywave.</p>
 						</div>
 						<div></div>
 					</div>
-					<div class="span-col-2">
-						<img class="case-study-image" src="images/auto-reorder/auto-reorder-list-view.jpg">
-					</div>
-				</div>
-				<div class="work-history-item feature">
-					<h4>Initial Research and Foundation</h4>
-					<div class="grid">
-						<div class="span-col-2">
-							<p>Genalpha's new features currently begin with a customer's business need. While the origin comes from the business, Genalpha conducts some initial research into the project to properly frame the functionality and need. This part of the process is a little more conventional.</p>
-							<p>Questions were asked internally as well as to the business who requested the functionality.  There was a need to discover where in the ordering process was a user the most motivated to create a subscription order, and how could we make it seemless as possible.   Genalpha uncovered needs that were not typical of how a basic subscription order occurs in most ecommerce platforms today. For instance there was an emphatic need, because of the nature of the business, to start an "auto-reorder" from scratch.</p>
-							<p>Apart of GenAlphas research was gaining a knowledge of previous purchases of users. What type of parts are they buying? How often are they buying those parts? This lead to a confirmation of the idea of subscriptions, and also aided us in the frequency options.</p>
-						</div>
-						<div>
-							<img style="max-width:300px;border-radius:4px;margin-left:20px;" src="images/fogg.jpg" alt="bj fogg behavior model">
-							<figcaption style="margin-left:20px;">BJ Fogg Behavior Model</figcaption>
-						</div>
-					</div>
-					<div class="span-col-2">
-						<img class="case-study-image" src="images/auto-reorder/1_auto-reorder-workflow.png">
-					</div>
-				</div>
-				<div class="work-history-item feature">
-					<div class="grid">
-						<div class="span-col-2">
-							<h4>User Path #1 — After a regular order is placed</h4>
-							<p>Referencing the BJ Fogg behavior method, GenAlpha asked "When would a user be the most willing create a subscription order?".  We found that after an initial order was placed we could make a few assumptions:</p>
-							<ul>
-								<li>The user is in a positive mindset of knowing that the order they just placed has been successfully submitted.</li>
-								<li>They most likely have the appropriate information handy to complete an order, address, billing info, etc.</li>
-								<li>There's a possible pain point here, if the user "wished" they could create this order automatically.</li>
-							</ul>
-						</div>
-						<div></div>
-					</div>
-					<div class="span-col-2">
-						<img class="case-study-image" src="images/auto-reorder/auto-reorder-on-confirmation.png">
-					</div>
-				</div>
-				<div class="work-history-item feature">
-					<div class="grid">
-						<div class="span-col-2">
-							<h4>User Path #2 — Creating an Auto-Reorder from scratch</h4>
-							<p>One reocurring request from the the business and their customers, was the ability to create an auto-reorder from a blank slate. Most times, these users are purchasers for their business and are given a list of parts with a part number and are told to create an order. These users do not browse the product. The need here is "give me the quickest way I can go into your product and create an auto-reorder".  </p>
-							<p>Adding an additional bulk upload feature that exists in the product for a different piece of functionality, GenAlpha created an entry point where a user could start a new order, or upload an Excel spreadsheet in the correct format.</p>
-						</div>
-						<div></div>
-					</div>
-					<div class="span-col-2">
-						<img class="case-study-image" src="images/auto-reorder/auto-reorder-reorder-detail-blank.png">
-					</div>
-				</div>
-				<div class="work-history-item feature">
-					<div class="grid">
-						<div class="span-col-2">
-							<h4>Conclusion</h4>
-							<p>This project has yet to be pushed to production, as it should be fully developed later this year. One of the challenges GenAlpha faces with every business is the integration aspect. Implementing this functionality was based on a single business's need. GenAlpha is aiming to build on this project, and make it something that can be used with any setup, any ERP. </p>
-							<p>Adding an additional bulk upload feature that exists in the product for a different piece of functionality, GenAlpha created an entry point where a user could start a new order, or upload an Excel spreadsheet in the correct format.</p>
-						</div>
-						<div></div>
-					</div>
-					<div class="span-col-2">
-						<img class="case-study-image" src="images/auto-reorder/auto-reorder-reorder-checkout.png">
-						<img class="case-study-image" src="images/auto-reorder/auto-reorder-reorder-detail-edit.png">
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div class="footer">
 		<div class="social-wrap">
 				<a target="_blank" href="https://codepen.io/jaamesw/">
