update new project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 				<div class="active">Work</div>
 				<div><a href="about.html">About</a></div>
 				<div><a href="images/jameswilliams_resX.pdf">Resume</a></div>
-				<div style="color:#181818;font-size:13px;background-color:#ffee58;line-height:1;box-shadow:0 4px 12px rgba(255,238,88,.5);border-radius:4px;padding:5px 8px">WIP - More examples on the way!</div>
 
 			</div>
 		</div>
@@ -49,6 +48,23 @@
 		</div>
 		<div class="intro-secondary">
 			<div>
+				<div class="work-history-item feature">
+					<div>
+						<h4>Shred 4/15 —<span>Improving the overall experience of scheduling and managing fitness classes.</span></h4>
+					</div>
+					<a href="shred.html">
+						<div class="case-study feature span-col-2">
+							<img class="case-study-feature" src="images/shred-wireframes.svg" alt="auto-reorder landing">
+						</div>
+					</a>
+					<div class="grid">
+						<div>
+							<p class="feature-info">This is a case study about improving the overall experience of using the fitness app for Shred 4/15 to schedule and view classes. The unsolicited redesign is based on my own research and feedback loops.</p>
+						</div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
 				<div class="work-history-item feature">
 					<div>
 						<h4>GenAlpha —<span> Lead the design and user-first approach to creating an ecommerce product for aftermarket manufacturing parts.</span></h4>
@@ -66,14 +82,6 @@
 						<div></div>
 					</div>
 				</div>
-				<!--
-				<div class="work-history-item grid">
-					<div>
-						<h4>GenAlpha<span>UX LEAD</span></h4>
-						<p class="responsibilities">Define the design, behavior, and usability requirements for our ecommerce product. I lead design demonstrations, participate in discovery meetings with new clients. Work with the product owner and CTO to ensure development process aligns with overall UX goals and philosophies.</p>
-					</div>
-				</div>
-			-->
 				<div class="work-history-item grid">
 					<div>
 						<h4>AccuLynx<span>Sr UX Engineer</span></h4>
