update image again

--- a/shred.html
+++ b/shred.html
@@ -53,7 +53,7 @@
 							<p>One of the benefits of becoming apart of a class-oriented gym, is a sense of community. Being apart of this community you share frustrations of burpees and triumphs of new ending warm-up paces. One of those frustrations for me is using the app to schedule and drop classes. At some point I asked myself, how could I make this better? How can I make this experience just as exciting and pleasent as it feels when walking into Shred?</p>
 						</div>
 					</div>
-					<img class="case-study-image" src="images/shred-intro2.jpg">
+					<img class="case-study-image" src="images/shred-intro-image.jpg">
 				</div>
 				<!--
 				<div class="work-history-item feature">
