--- a/shred.html
+++ b/shred.html
@@ -55,22 +55,37 @@
 					</div>
 					<img class="case-study-image" src="images/shred-intro-image.jpg">
 				</div>
-				<!--
-				<div class="work-history-item feature">
-					<h4>Initial Research and Foundation</h4>
+				
+				<div class="work-history-item feature center">
+					<h4>Timeline and Info</h4>
 					<div class="grid">
 						<div class="span-col-2">
-							<p>Apart of GenAlphas research was gaining a knowledge of previous purchases of users. What type of parts are they buying? How often are they buying those parts? This lead to a confirmation of the idea of subscriptions, and also aided us in the frequency options.</p>
+							<p>At the time of this being written, this is an ongoing project. I've chosen to update this page as I've completed work and also when time allows. Currently I am 3-4 weeks in.  As said before my initial goal for this redesign wasn't to simply update the style of the outdated UI for the current Shred app. I wanted to dive deep into the experience of the app, talk to users, and truly design an improvement. Visually and conceptually. There are 3 main challenges in this study that will be outlined below.</p>
+							<p>The visuals in this study are created in Sketch, with plans to use InVision to create small scale workable prototypes to demonstrate overall improvement.  As an iphone user, I have primarily concerned myself with this platform as I found it is how most users I've talked to schedule and browse classes.</p>
+							<p>To begin this process, I explored the current iphone app, and familiarized myself with it's full capabilities. I took some notes on problem or frustration areas I felt while using the app in this exploration time, and also in general day to day use.</p>
 						</div>
-						<div>
-							<img style="max-width:300px;border-radius:4px;margin-left:20px;" src="images/fogg.jpg" alt="bj fogg behavior model">
-							<figcaption style="margin-left:20px;">BJ Fogg Behavior Model</figcaption>
-						</div>
-					</div>
-					<div class="span-col-2">
-						<img class="case-study-image" src="images/auto-reorder/1_auto-reorder-workflow.png">
 					</div>
 				</div>
+				<div class="work-history-item feature center">
+					<h4>Challenge #1 - Make it easier and quicker to book classes across multiple days</h4>
+					<img class="case-study-image" src="images/shred-challenge-1.jpg">
+					<div class="grid">
+						<div class="span-col-2">
+							<p>A common need from speaking to users, is the need to easily book classes across multiple days. Many wanted </p>
+						</div>
+					</div>
+				</div>
+				<div class="work-history-item feature center">
+					<h4>Timeline and Info</h4>
+					<div class="grid">
+						<div class="span-col-2">
+							<p>At the time of this being written, this is an ongoing project. I've chosen to update this page as I've completed work and also when time allows. Currently I am 3-4 weeks in.  As said before my initial goal for this redesign wasn't to simply update the style of the outdated UI for the current Shred app. I wanted to dive deep into the experience of the app, talk to users, and truly design an improvement. Visually and conceptually.</p>
+							<p>The visuals in this study are created in Sketch, with plans to use InVision to create small scale workable prototypes to demonstrate overall improvement.  As an iphone user, I have primarily concerned myself with this platform as I found it is how most users I've talked to schedule and browse classes.</p>
+							<p>To begin this process, I explored the current iphone app, and familiarized myself with it's full capabilities. I took some notes on problem or frustration areas I felt while using the app in this exploration time, and also in general day to day use.</p>
+						</div>
+					</div>
+				</div>
+				<!--
 				<div class="work-history-item feature">
 					<div class="grid">
 						<div class="span-col-2">
