--- a/design-excercise.html
+++ b/design-excercise.html
@@ -7,6 +7,7 @@
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&amp;display=swap'>
 <link rel="stylesheet" href="./design-excercise.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <!-- partial:index.partial.html -->
