--- a/design-excercise.html
+++ b/design-excercise.html
@@ -28,14 +28,9 @@
 						<input id="searchName" type="text">
 					</label>
 				</div>
-				<div class="input-wrap">
-					<label for="searchName">
-						<span class="input-label">Search Label</span>
-						<input id="searchName" type="text">
-					</label>
-				</div>
 				<button class="action-button">Find my Lawyer</button>
 			</div>
+			<span class="location-note"><i class="fas fa-map-marker-alt"></i>Looking near Chicago. Not Here?</span>
 		</div>
 	</section>
 	<section class="section__profile-cards">
