--- a/design-exercise.html
+++ b/design-exercise.html
@@ -42,7 +42,7 @@
 					<div>
 						<h4>Elle Woods
 							<div class="profile-card-location tooltip">
-								Avvo Rating: <span class="avvo-rating">9.8</span>
+								<a href="#">Avvo Rating:</a> <span class="avvo-rating">9.8</span>
 								<span class="tooltip-top">Brief explanation of what this numeric value means.</span>
 							</div>
 						</h4>
